2013-04-16  6.8.5-0 Cristy  <quetzlzacatenango@image...>
  * Don't modify channel values for -separate (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23193).
  * The -adaptive-sharpen option is now sharpening properly (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23211).

2013-04-15  6.8.4-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.4-10, SVN revision 11851.

2013-04-11  6.8.4-10 Cristy  <quetzlzacatenango@image...>
  * Ensure -define jpeg:extent is resticted to at most 7 iterations (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23179).
  * Move X11 font support from annotate.c source module to xwindow.c.

2013-04-10  6.8.4-9 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.4-9, SVN revision 11818.

2013-04-10  6.8.4-9 Bastien Roucaries  <roucaries.basti...>
  * Respect --program-suffix configure script option (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23143).
  * Update to the newest AX_CHECK_PTHREAD macro from autoconf-archive.

2013-04-10  6.8.4-9 Anthony Thyssen <A.Thyssen@griffith...>
  * Save the calculated angle for "deskew" as the artifact "deskew:angle"

2013-04-08  6.8.4-9 Cristy  <quetzlzacatenango@image...>
  * Pass JP2 format type to decoder (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23038).
  * Previously tinting a grayscale image returned dark results.
  * The -page option only affects new images (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23172).
  * Revert 'Move binaries to lib subdirectory and link are created from binary
	  package' patch.  We're getting too many bug reports.

2013-04-07  6.8.4-8 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.4-8, SVN revision 11743.

2013-04-06  6.8.4-8 Cristy  <quetzlzacatenango@image...>
  * Include intensity type in the MIFF metadata.
