@@ -1,3 +1,6 @@
+2013-04-16  6.8.5-0 Glenn Randers-Pehrson <glennrp@image...>
+  * Handle benign errors as warnings in the PNG coder.
+
 2013-04-16  6.8.5-0 Cristy  <quetzlzacatenango@image...>
   * Don't modify channel values for -separate (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23193).
